--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "jeyroik/df-templates": "0.*",
     "jeyroik/df-templates-triggers": "0.*",
     "jeyroik/df-applications": "4.*",
-    "jeyroik/extas-system-options": "0.*",
-    "jeyroik/df-triggers": "3.*"
+    "jeyroik/extas-system-options": "0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9",
